Atualizando o código da base de dados

--- a/notebooks/scraping/baixar_base_istoedinheiro.ipynb
+++ b/notebooks/scraping/baixar_base_istoedinheiro.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "5f3e4318",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "7c609fb0",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
     "    return resposta.text\n",
     "\n",
     "def get_news_page(secao, page):\n",
-    "    url = f'https://www.istoedinheiro.com.br/categoria/{secao}/page/{page}/'\n",
+    "    url = f'https://www.istoedinheiro.com.br/tag/{secao}/page/{page}/'\n",
     "    content = get_content(url)\n",
     "    df_res = parse_result(content, page, secao)\n",
     "    return df_res\n",
@@ -170,19 +170,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "41cf1c17",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Quer pesquisar notícias em quais seções do site?!\n",
     "# Ex: assuntos_noticias = ['estilo', 'economia']\n",
-    "assuntos_noticias = []"
+    "assuntos_noticias = ['bolsonaro']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "b6d19e7e",
    "metadata": {},
    "outputs": [],
@@ -205,19 +205,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "34adbf88",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Altere aqui!\n",
     "# Defina quantas páginas de cada seção quer recuperar.\n",
-    "qtde_paginas = 0"
+    "qtde_paginas = 40"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "b0d71d04",
    "metadata": {},
    "outputs": [],
@@ -243,10 +243,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "b1de439f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ok! Vou baixar notícias sobre nas seções ['bolsonaro'] no IstoEDinheiro.com.br!\n",
+      "\n",
+      "Aguarde... Este processo pode demorar alguns minutos!\n",
+      "\n",
+      "Progresso:\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "88387683e4a84b2c886eb175e02badee",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "IntProgress(value=0, max=40)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processo finalizado!\n",
+      "\n",
+      "Geramos um arquivo chamado dados.xlsx na pasta data, confira!\n"
+     ]
+    }
+   ],
    "source": [
     "get_news(assuntos_noticias, n_pages=qtde_paginas, perc_train=0.6)"
    ]
