--- a/notebooks/relatorio_modelo.ipynb
+++ b/notebooks/relatorio_modelo.ipynb
@@ -1086,16 +1086,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probabilidade NEGATIVA 0.22074827230121535\n",
-      "Probabilidade POSITIVA 0.27103026451664153\n",
-      "Probabilidade NEUTRA 0.5082214631821431\n"
+      "Probabilidade NEGATIVAS/TOTAL: 0.22074827230121535\n",
+      "Probabilidade POSITIVA/TOTAL: 0.27103026451664153\n",
+      "Probabilidade NEUTRA/TOTAL: 0.5082214631821431\n"
      ]
     }
    ],
@@ -1104,9 +1104,9 @@
     "prob_1=len(lista_train1_quero)/len(lista_total)\n",
     "prob_2=len(lista_train2_quero)/len(lista_total)\n",
     "\n",
-    "print(f'Probabilidade NEGATIVA {prob_0}')\n",
-    "print(f'Probabilidade POSITIVA {prob_1}')\n",
-    "print(f'Probabilidade NEUTRA {prob_2}')"
+    "print(f'Probabilidade NEGATIVAS/TOTAL: {prob_0}')\n",
+    "print(f'Probabilidade POSITIVA/TOTAL: {prob_1}')\n",
+    "print(f'Probabilidade NEUTRA/TOTAL: {prob_2}')"
    ]
   },
   {
