Adicionando testes, iterações

--- a/notebooks/relatorio_modelo_desc.ipynb
+++ b/notebooks/relatorio_modelo_desc.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "4       1       0           não inclui reajuste do salário mínimo  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
        "4       2       0            condenou crime sentença Bolsonaro  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,18 +384,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train0_tit=train.loc[train['Target']==0,['Titulo','Target']]\n",
-    "train1_tit=train.loc[train['Target']==1,['Titulo','Target']]\n",
-    "train2_tit=train.loc[train['Target']==2,['Titulo','Target']]"
+    "train0_tit=train.loc[train['Target']==0,['Descrição','Target']]\n",
+    "train1_tit=train.loc[train['Target']==1,['Descrição','Target']]\n",
+    "train2_tit=train.loc[train['Target']==2,['Descrição','Target']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +519,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista_total = lista_train2_tit_quero + lista_train1_tit_quero + lista_train0_tit_quero\n",
+    "lista_exclusivas = []\n",
+    "\n",
+    "for i in range(0, len(lista_total)):\n",
+    "    palavra = lista_total[i]\n",
+    "    if (palavra not in serie0_tit.index and palavra not in serie1_tit.index) or (palavra not in serie0_tit.index and palavra not in serie2_tit.index) or (palavra not in serie1_tit.index and palavra not in serie2_tit.index):\n",
+    "        lista_exclusivas.append(palavra)\n",
+    "\n",
+    "notexclusivo0 = []\n",
+    "for i in range(0, len(serie0_tit)):\n",
+    "    palavra = serie0_tit.index[i]\n",
+    "    if palavra in lista_exclusivas:\n",
+    "        notexclusivo0.append(palavra)\n",
+    "\n",
+    "notexclusivo1 = []\n",
+    "for i in range(0, len(serie1_tit)):\n",
+    "    palavra = serie1_tit.index[i]\n",
+    "    if palavra in lista_exclusivas:\n",
+    "        notexclusivo1.append(palavra)\n",
+    "\n",
+    "notexclusivo2 = []\n",
+    "for i in range(0, len(serie2_tit)):\n",
+    "    palavra = serie2_tit.index[i]\n",
+    "    if palavra in lista_exclusivas:\n",
+    "        notexclusivo2.append(palavra)\n",
+    "\n",
+    "\n",
+    "serie0_tit = serie0_tit.drop(notexclusivo0) \n",
+    "serie1_tit = serie1_tit.drop(notexclusivo1)\n",
+    "serie2_tit = serie2_tit.drop(notexclusivo2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +680,7 @@
        "Name: Target, dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,16 +785,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bot NEGATIVO: 94\n",
-      "Bot POSITIVO: 84\n",
-      "Bot NEUTRO: 142\n"
+      "Bot NEGATIVO: 140\n",
+      "Bot POSITIVO: 70\n",
+      "Bot NEUTRO: 110\n"
      ]
     }
    ],
@@ -768,20 +806,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bot FAKE NEGATIVO: 66\n",
-      "Bot FAKE POSITIVO: 43\n",
-      "Bot FAKE NEUTRO: 31\n",
-      "------------------------------\n",
-      "Bot VERDADEIRO NEGATIVO: 28\n",
-      "Bot VERDADEIRO POSITIVO: 41\n",
-      "Bot VERDADEIRO NEUTRO: 111\n"
+      "Bot FAKE NEGATIVO: 113\n",
+      "Bot FAKE POSITIVO: 42\n",
+      "Bot FAKE NEUTRO: 35\n"
      ]
     }
    ],
@@ -789,10 +823,6 @@
     "falso0 = 0\n",
     "falso1 = 0\n",
     "falso2 = 0\n",
-    "\n",
-    "verd0=0\n",
-    "verd1=0\n",
-    "verd2=0\n",
     "\n",
     "for i in range(0, len(test_tit)):\n",
     "    if test_tit.iloc[i, 1] != test_tit.iloc[i, 2]:\n",
@@ -802,33 +832,22 @@
     "            falso1 += 1\n",
     "        else:\n",
     "            falso2 += 1\n",
-    "    else:\n",
-    "        if test_tit.iloc[i, 2] == 0:\n",
-    "            verd0 += 1\n",
-    "        elif test_tit.iloc[i, 2] == 1:\n",
-    "            verd1 += 1\n",
-    "        else:\n",
-    "            verd2 += 1\n",
     "        \n",
     "print(f'Bot FAKE NEGATIVO: {falso0}')\n",
     "print(f'Bot FAKE POSITIVO: {falso1}')\n",
-    "print(f'Bot FAKE NEUTRO: {falso2}')\n",
-    "print(30*'-')\n",
-    "print(f'Bot VERDADEIRO NEGATIVO: {verd0}')\n",
-    "print(f'Bot VERDADEIRO POSITIVO: {verd1}')\n",
-    "print(f'Bot VERDADEIRO NEUTRO: {verd2}')"
+    "print(f'Bot FAKE NEUTRO: {falso2}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5625\n"
+      "0.40625\n"
      ]
     }
    ],
@@ -840,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +923,7 @@
        "      <th>5</th>\n",
        "      <td>pgr defende prorrogar investigação de bolsonar...</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -941,14 +960,14 @@
        "2  bolsonaro cometeu crime contra a humanidade na...       0           0\n",
        "3  crítico de bolsonaro compra domínio e recria s...       0           0\n",
        "4  bolsonaro cometeu crime contra a humanidade na...       0           0\n",
-       "5  pgr defende prorrogar investigação de bolsonar...       0           0\n",
+       "5  pgr defende prorrogar investigação de bolsonar...       0           2\n",
        "6  consultorias de orçamento discordam de veto à ...       0           0\n",
        "7  entrevista de bolsonaro a jn tem panelaços em ...       0           2\n",
        "8   lula tem 47 contra 32 de bolsonaro diz datafolha       2           2\n",
        "9  bolsonaro passou ao centrão área com licitação...       0           0"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
